--- a/papers.bib
+++ b/papers.bib
@@ -23,21 +23,9 @@
 
 % 2023
 
-@inproceedings{Zhang2023experience,
-author = {Zhang, Yicheng and Weidner, Matthew and Miller, Heather},
-title = {Programmer Experience When Using {CRDTs} to Build Collaborative Webapps: Initial Insights},
-booktitle = {13th Annual Workshop on the Intersection of HCI and PL},
-series = {PLATEAU 2023},
-year = {2023},
-month = feb,
-pdf = {https://kilthub.cmu.edu/articles/conference_contribution/Programmer_Experience_When_Using_CRDTs_to_Build_Collaborative_Webapps_Initial_Insights/22277341/1},
-doi = {10.1184/R1/22277341.v1},
-keywords = {user-study, computation, composition}
-}
-
 @article{Guidec2022opportunistic,
-author = {Guidec, Frédéric and Mahéo, Yves and Noûs, Camille},
 title = {Supporting conflict-free replicated data types in opportunistic networks},
+author = {Guidec, Frédéric and Mahéo, Yves and Noûs, Camille},
 journal = {Peer-to-Peer Networking and Applications},
 volume = {16},
 pages = {395–419},
@@ -63,6 +51,21 @@ eprint = {2210.12605},
 doi = {10.14778/3574245.3574268},
 url = {https://www.vldb.org/pvldb/vol16/p856-power.pdf},
 keywords = {computation, crdt-related}
+}
+
+@inproceedings{Tschudin2022connectionless,
+author = {Tschudin, Christian},
+title = {A Connectionless Grow-Only Set CRDT},
+year = {2022},
+month = {nov},
+isbn = {9781450399289},
+publisher = {ACM},
+doi = {10.1145/3565383.3566110},
+booktitle = {3rd International Workshop on Distributed Infrastructure for the Common Good},
+pages = {25–30},
+numpages = {6},
+keywords = {delta-based, set-crdt},
+series = {DICG 2022}
 }
 
 @inproceedings{Jannes2022secure,
@@ -385,16 +388,6 @@ pdf = {https://munin.uit.no/bitstream/handle/10037/24430/article.pdf},
 keywords = {systems, relational, SQLite}
 }
 
-@phdthesis{Nair2021PhD,
-author = {Nair, Sreeja Sasidharan},
-title = {Designing safe and highly available distributed applications},
-school = {Sorbonne Universit{\'e}},
-year = {2021},
-month = jul,
-url = {https://theses.hal.science/tel-03339393},
-keywords = {verification, trees, Soteria, Maram}
-}
-
 @inproceedings{Yactine2021ASPAS,
 author = {Yactine, Houssam and Shoker, Ali and Younes, Georges},
 title = {{ASPAS}: As Secure as Possible Available Systems},
@@ -678,16 +671,6 @@ doi = {10.1145/3380787.3393685},
 keywords = {systems, Flec}
 }
 
-@article{Sanjuan2020Merkle,
-author = {Sanjuan, Hector and Poyhtari, Samuli and Teixeira, Pedro and Psaras, Ioannis},
-title = {{Merkle-CRDTs}: {Merkle-DAGs} meet {CRDTs}},
-year = {2020},
-month = apr,
-eprint = {2004.00107},
-url = {https://arxiv.org/abs/2004.00107},
-keywords = {security, logical-clocks}
-}
-
 
 % 2019
 
@@ -881,6 +864,16 @@ keywords = {text-editing, operation-based}
 
 
 % 2018
+
+@phdthesis{Jungnickel2018thesis
+author = {Jungnickel, Tim},
+title = {On the feasibility of multi-leader replication in the early tiers},
+school = {TU Berlin},
+year = {2018},
+type = {PhD Thesis},
+doi = {10.14279/depositonce-7109},
+keywords = {systems}
+}
 
 @inproceedings{Hall2018CausalGraph,
 author = {Hall, Aaron and Nelson, Grant and Thiesen, Mike and Woods, Nate},
